[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "immich-memories"
dynamic = ["version"]
description = "Turn your Immich photo library into video memory compilations with music and smart cuts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Immich Memories Contributors" }
]
keywords = ["immich", "video", "memories", "compilation", "photo-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "nicegui>=3.9.0",  # CVE-2026-33332 fixed in 3.9.0
    "moviepy>=1.0.3",
    "scenedetect[opencv]>=0.6",
    "opencv-python>=4.9",
    "videohash>=3.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "pillow>=12.1.1",
    "pillow-heif>=1.0",
    "numpy>=1.24",
    "imagehash>=4.3",
    "watchdog>=3.0",
    "croniter>=1.3",
    "geopy>=2.4",
    "staticmap>=0.5",
    "apprise>=1.9",
]

[project.optional-dependencies]
face = [
    "face-recognition>=1.3",
    "dlib>=19.24",
]
# Mac-specific dependencies for GPU-accelerated processing
mac = [
    "pyobjc-core>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Vision>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pyobjc-framework-Metal>=9.0; sys_platform == 'darwin'",
]
# Audio metadata for local music library
audio = [
    "mutagen>=1.47",
]
# ML-based audio content analysis (laughter/speech detection)
# PANNs replaces TensorFlow/YAMNet — same AudioSet classes, pure PyTorch
audio-ml = [
    "torch>=2.0",
    "panns-inference>=0.1",
]
# OIDC authentication (only needed for SSO login)
auth = [
    "authlib>=1.3",
]
# Local Demucs stem separation (in-process, no API server needed)
# Model cache: ~/.cache/torch/hub/ (~80MB for htdemucs)
demucs = [
    "demucs>=4.0",
]
# Local ACE-Step music generation (in-process, no API server needed)
# ⚠️  NOT a pip extra — ACE-Step is not published on PyPI.
#     Install manually: pip install 'ace-step @ git+https://github.com/ace-step/ACE-Step.git'
#     See docs-site/docs/music/ace-step.md for setup instructions.
# GPU-accelerated title rendering with Taichi
# Supports: Metal (macOS), CUDA (NVIDIA), Vulkan, OpenGL, CPU fallback
gpu = [
    "taichi>=1.7.0",
    "freetype-py>=2.4",  # SDF font rendering
]
# All cross-platform optional features
all = [
    "immich-memories[face]",
    "immich-memories[audio]",
    "immich-memories[audio-ml]",
    "immich-memories[demucs]",
    "immich-memories[gpu]",
]
# All features for macOS (includes Apple Vision framework)
all-mac = [
    "immich-memories[face]",
    "immich-memories[audio]",
    "immich-memories[audio-ml]",
    "immich-memories[demucs]",
    "immich-memories[mac]",
    "immich-memories[gpu]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=5.2.3",
    "pytest-xdist>=3.5",
    "mypy>=1.0",
    "ruff>=0.1",
    "pre-commit>=3.0",
    "commitizen>=3.0",
    "python-semantic-release>=9.0",
    "types-PyYAML>=6.0",
    "types-croniter>=6.0",
    # Advanced quality gates
    "refurb>=2.0",
    "import-linter>=2.0",
    "grimp>=3.0",
    "deptry>=0.20",
    "mutmut>=2.0",
    "diff-cover>=9.0",
    "oidc-provider-mock>=0.3",
    # E2E browser tests
    "pytest-playwright>=0.5",
]

[project.scripts]
immich-memories = "immich_memories.cli:main"

[project.urls]
Homepage = "https://github.com/sam-dumont/immich-video-memory-generator"
Documentation = "https://sam-dumont.github.io/immich-video-memory-generator/"
Repository = "https://github.com/sam-dumont/immich-video-memory-generator"
Issues = "https://github.com/sam-dumont/immich-video-memory-generator/issues"
Changelog = "https://github.com/sam-dumont/immich-video-memory-generator/releases"

[tool.hatch.version]
source = "vcs"
# On non-tagged commits: 0.1.0.dev1+g1234567
# On tagged commits: 0.1.0

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"  # For PyPI compatibility

[tool.hatch.build.hooks.vcs]
version-file = "src/immich_memories/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/immich_memories"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

# Semantic Release Configuration
[tool.semantic_release]
version_toml = ["pyproject.toml:tool.semantic_release.version"]
version = "0.2.0"
tag_format = "v{version}"
branch = "main"
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches."rc"]
match = "rc/*"
prerelease = true
prerelease_token = "rc"

[tool.semantic_release.branches."dev"]
match = "(dev|develop|feature)/*"
prerelease = true
prerelease_token = "dev"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^ci:",
    "^Merge",
]

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
upload_to_pypi = false  # PyPI publishing handled by GitHub Actions trusted publishers

# Commitizen configuration for conventional commits
[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "scm"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true

[tool.uv]
# Only resolve dependencies for the current platform to avoid cross-platform issues
# with platform-specific packages like pyobjc
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'", "sys_platform == 'win32'"]

# WHY: torchaudio 2.9+ replaced soundfile backend with torchcodec, which has
# ABI incompatibilities with PyTorch on macOS. ACE-Step uses torchaudio.save()
# with backend="soundfile" which only works on torchaudio <2.9.
override-dependencies = ["torchaudio<2.9"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]
exclude = ["src/immich_memories/_version.py"]  # Auto-generated by hatch-vcs

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # contextlib.suppress - often less readable
    "SIM115", # context manager for temp files - false positives with delete=False
    "ARG001", # unused function argument - often needed for interface compliance
    "ARG002", # unused method argument - often needed for interface compliance
    "B904",   # raise from - not always needed for simple re-raises
    "S603",   # subprocess call with non-literal args - we validate paths via security.py
    "S607",   # partial executable path - we use standard system binaries (ffmpeg, ffprobe)
    "S101",   # assert used - fine for non-security assertions in application code
    "S311",   # pseudo-random generators - not used for security purposes
    "S301",   # pickle - not used but would flag stdlib imports
    "S110",   # try-except-pass - used for cleanup/fallback paths
    "S112",   # try-except-continue - used for best-effort processing
]

[tool.ruff.lint.isort]
known-first-party = ["immich_memories"]

[tool.ruff.lint.per-file-ignores]
# app.py needs logging configured before other imports
"src/immich_memories/ui/app.py" = ["E402"]
# mixer.py has bottom-of-file re-exports to avoid circular imports with mixer_helpers/mixer_class
"src/immich_memories/audio/mixer.py" = ["E402", "I001"]
# Tests use hardcoded /tmp paths as dummy values, not actual temp file usage
"tests/**" = ["S108"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
strict = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "moviepy.*",
    "scenedetect.*",
    "videohash.*",
    "face_recognition.*",
    "imagehash.*",
    "mutagen.*",
    # macOS frameworks (PyObjC)
    "Vision.*",
    "Quartz.*",
    "CoreImage.*",
    "Metal.*",
    "objc.*",
    # PANNs / PyTorch (optional for audio content analysis)
    "torch.*",
    "panns_inference.*",
    # Taichi (GPU rendering)
    "taichi.*",
    # Not-yet-implemented modules
    "immich_memories.cache.*",
    # Optional audio dependencies
    "soundfile.*",
    "acestep.*",
    # SDF font rendering
    "freetype.*",
    # PyAV (optional video processing)
    "av.*",
    # Streamlit runtime (optional UI)
    "streamlit.runtime.scriptrunner.*",
    # Map rendering (staticmap)
    "staticmap.*",
    # Geocoding (geopy)
    "geopy.*",
]
ignore_missing_imports = true

# scipy lacks type stubs
[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

# OpenCV has incomplete type stubs, especially for CUDA
[[tool.mypy.overrides]]
module = ["cv2", "cv2.*"]
ignore_missing_imports = true
ignore_errors = true

# Files using OpenCV CUDA functions with incomplete stubs
[[tool.mypy.overrides]]
module = [
    "immich_memories.analysis.scenes",
    "immich_memories.analysis.scoring",
    "immich_memories.analysis.apple_vision",
    "immich_memories.processing.transforms",
    "immich_memories.processing.transforms_smart_crop",
    "immich_memories.processing.scaling_utilities",
]
disable_error_code = ["attr-defined", "call-overload", "union-attr", "assignment", "misc", "has-type"]

# API client with dynamic JSON responses
[[tool.mypy.overrides]]
module = [
    "immich_memories.api.immich",
]
disable_error_code = ["attr-defined", "arg-type", "return-value"]

# Streamlit UI with dynamic session state
[[tool.mypy.overrides]]
module = [
    "immich_memories.ui.components",
    "immich_memories.ui.app",
    "immich_memories.ui.pages._step4_music",
    "immich_memories.ui.pages._step4_upload",
    "immich_memories.ui.pages._step4_generate",
    "immich_memories.ui.pages.step4_export",
]
disable_error_code = ["assignment", "misc", "arg-type", "import-untyped", "attr-defined", "func-returns-value"]

# Audio mood analyzer with dynamic LLM outputs
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.mood_analyzer",
    "immich_memories.audio.mood_analyzer_backends",
]
disable_error_code = ["dict-item"]

# Audio content analyzer with PANNs
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.content_analyzer",
]
disable_error_code = ["attr-defined", "assignment", "misc", "has-type"]

# Audio music generator with dynamic callbacks
[[tool.mypy.overrides]]
module = [
    "immich_memories.audio.music_generator",
    "immich_memories.audio.music_generator_client",
]
disable_error_code = ["valid-type", "misc", "call-arg"]

# Audio mixer with optional path types
[[tool.mypy.overrides]]
module = ["immich_memories.audio.mixer_class"]
disable_error_code = ["assignment"]

# Video cache with Immich client compatibility
[[tool.mypy.overrides]]
module = ["immich_memories.cache.video_cache"]
disable_error_code = ["attr-defined"]

# Taichi GPU renderers (uses Taichi-specific type annotations, absorbed particle/text mixins)
[[tool.mypy.overrides]]
module = [
    "immich_memories.titles.renderer_taichi",
    "immich_memories.titles.sdf_font",
    "immich_memories.titles.taichi_kernels",
    "immich_memories.titles.taichi_globe",
    "immich_memories.titles.sdf_font_rendering",
    "immich_memories.titles.taichi_video",
]
disable_error_code = ["valid-type", "assignment", "misc", "truthy-function", "union-attr", "import-untyped", "attr-defined", "has-type"]

# PIL renderer with optional font types
[[tool.mypy.overrides]]
module = [
    "immich_memories.titles.renderer_pil",
    "immich_memories.titles.ending_service",
]
disable_error_code = ["attr-defined", "arg-type", "union-attr", "has-type"]

# Title video encoding with optional subprocess pipes
[[tool.mypy.overrides]]
module = ["immich_memories.titles.video_encoding"]
disable_error_code = ["union-attr", "arg-type"]

# Title rendering service with optional Taichi imports
[[tool.mypy.overrides]]
module = ["immich_memories.titles.rendering_service"]
disable_error_code = ["assignment", "misc", "attr-defined", "arg-type"]

# Unified analyzer with complex audio analysis
[[tool.mypy.overrides]]
module = ["immich_memories.analysis.unified_analyzer"]
disable_error_code = ["var-annotated", "assignment", "attr-defined"]

# Title generator with optional Taichi imports
[[tool.mypy.overrides]]
module = ["immich_memories.titles.generator"]
disable_error_code = ["assignment", "misc"]

# Analysis pipeline services (composed services with callback injection)
[[tool.mypy.overrides]]
module = [
    "immich_memories.analysis.clip_analyzer",
    "immich_memories.analysis.clip_refiner",
    "immich_memories.analysis.preview_builder",
    "immich_memories.analysis.analyzer_factory",
    "immich_memories.analysis.smart_pipeline",
]
disable_error_code = ["attr-defined", "arg-type", "return-value", "operator"]

# API services (callback-based request delegation)
[[tool.mypy.overrides]]
module = [
    "immich_memories.api.search_service",
    "immich_memories.api.sync_client",
]
disable_error_code = ["arg-type"]

# Pandas is optional for UI
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*"]
ignore_missing_imports = true

# Cognitive complexity (complements cyclomatic complexity from xenon)
[tool.complexipy]
paths = ["src"]
max_complexity_allowed = 15
exclude = [
    "src/immich_memories/_version.py",
    "src/immich_memories/cli/",              # Click decorators inflate complexity scores
    "src/immich_memories/titles/taichi_*",    # GPU kernel compilation is inherently complex
    "src/immich_memories/titles/sdf_*",       # SDF font rendering kernels
]

# Dependency hygiene
[tool.deptry]
exclude = ["tests", "docs", "scripts"]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "gunicorn", "uvicorn",                              # Runtime-only servers
    "hatch-vcs", "hatchling",                           # Build-only
    "semantic-release",                                 # CI-only
    "opencv-python",                                    # imported as cv2
    "pyyaml",                                           # imported as yaml
    "pillow",                                           # imported as PIL
    "imagehash",                                        # imported via videohash
    "videohash",                                        # used via subprocess
    "watchdog",                                         # runtime scheduler
    "face-recognition",                                 # imported as face_recognition
    "dlib",                                             # face-recognition backend
    "pyobjc-core", "pyobjc-framework-Vision",           # macOS-only, runtime
    "pyobjc-framework-Quartz", "pyobjc-framework-Metal", # macOS GPU
    "torch",                                            # PANNs inference backend
    "freetype-py",                                      # imported as freetype
    "pytest", "pytest-cov", "pytest-asyncio",           # dev tools (CLI usage)
    "pytest-benchmark", "pytest-xdist", "pytest-playwright", # dev tools
    "mypy", "ruff",                                      # dev tools
    "pre-commit", "commitizen",                         # dev tools
    "types-pyyaml",                                     # mypy stub
    "grimp",                                            # import-linter backend
    "refurb", "import-linter",                          # quality CLI tools
    "diff-cover", "deptry",                             # quality tools
    "mutmut",                                           # mutation testing (CLI tool)
    "python-semantic-release",                          # CI release tool
    "types-PyYAML", "types-croniter",                   # mypy stubs
    "authlib",                                          # auth: used in upcoming OIDC client task
    "oidc-provider-mock",                               # auth: used in upcoming OIDC tests task
    "demucs",                                           # optional: local stem separation
]
DEP001 = [
    "cv2", "Quartz", "Vision", "Metal", "CoreImage",   # Platform/alt-name imports
    "yaml", "acestep", "soundfile", "scipy",            # Optional deps imported conditionally
    "torchaudio", "demucs",                             # Optional: local audio pipeline
    "PIL", "av", "freetype", "streamlit",               # Alt package names (Pillow→PIL, pyav→av)
    "starlette",                                        # Transitive via nicegui→fastapi→starlette
]
DEP003 = ["PIL", "cv2", "yaml", "starlette"]  # Known transitive imports

# Architectural boundaries
[tool.importlinter]
root_packages = ["immich_memories"]
include_external_packages = true

[[tool.importlinter.contracts]]
id = "no-ui-in-core"
name = "Core analysis/processing must not import UI"
type = "forbidden"
source_modules = [
    "immich_memories.analysis",
    "immich_memories.processing",
    "immich_memories.titles",
]
forbidden_modules = ["immich_memories.ui"]

[[tool.importlinter.contracts]]
id = "no-cli-in-core"
name = "Core must not import CLI"
type = "forbidden"
source_modules = [
    "immich_memories.analysis",
    "immich_memories.processing",
    "immich_memories.titles",
    "immich_memories.audio",
]
forbidden_modules = ["immich_memories.cli"]

[tool.refurb]
# FURB184 (chained assignments) is a style preference — config + result = func(config)
# is more readable than result = func(MockConfig()) in tests
ignore = [
    "FURB184",  # chained assignments: config + result is more readable
    "FURB110",  # X if X else Y: false positive on Linux with similar variable names
]
# refurb sees src/ layout modules twice — only scan the package, not src/
python_version = "3.11"

[tool.mutmut]
paths_to_mutate = ["src/immich_memories/"]
pytest_add_cli_args_test_selection = ["tests/"]
backup = false
# Exclude modules that use C extensions (segfault risk during mutation):
# taichi GPU kernels, face-recognition/dlib, PyAV frame blending
dict_synonyms = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires FFmpeg (deselect with '-m not integration')",
    "e2e: Playwright E2E browser tests (deselect with '-m not e2e')",
    "slow: long-running tests (full generation pipeline, ~10min)",
    "perf: performance benchmarks (run with: make benchmark-perf)",
]
addopts = "-m 'not integration and not e2e'"

[tool.coverage.run]
source = ["src/immich_memories"]
branch = true
# Exclude NiceGUI UI pages from coverage measurement.
# These are presentation-only (widgets, progress bars, video player) and cannot be
# tested without a browser. Core logic lives in generate.py, processing/, analysis/.
# When Playwright E2E tests are added (#37), remove this exclusion.
omit = [
    "src/immich_memories/ui/pages/*",
    "src/immich_memories/ui/theme.py",
    "src/immich_memories/ui/components/*",
]

[tool.coverage.report]
# Unit tests alone reach ~48%. Integration XMLs push core to 60%.
# This floor prevents erosion — the REAL check is diff-cover at 80% per PR.
# UI pages are excluded (see [tool.coverage.run].omit) until Playwright E2E (#37).
fail_under = 45
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",  # Protocol stubs
]
